--- a/Trillo/sass/_layout.scss
+++ b/Trillo/sass/_layout.scss
@@ -39,6 +39,7 @@
 }
 
 .detail {
+  font-size: 1.4rem;
   display: flex;
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
@@ -46,7 +47,6 @@
 }
 
 .description {
-  font-size: 1.4rem;
   flex: 0 0 60%; 
   margin-right: 4.5rem;
   background-color: #fff;
@@ -56,6 +56,7 @@
 
 .user-reviews {
   flex: 1;
-
-  background-color: yellowgreen;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
